# physics-informed-yield-response

./: .gitignore  README.md  pyproject.toml  run_bayes_data_ropt_only.py  run_bayes_pool_ropt.py  run_bayes_saturating_mlpriors.py  run_build_panel_stub.py  run_build_prism_county_year.py  run_build_state_features_from_panel.py  run_build_state_ml_dataset_v2.py  run_curve_demo.py  run_curve_saturating_demo.py  run_eval_loso_state_bayes_vs_ml.py  run_features_demo.py  run_fit_crops_demo.py  run_fit_regions.py  run_fit_saturating_demo.py  run_hello.py  run_loso_county_bayes_v1.py  run_loso_county_bayes_v5_heat.py  run_ml_predict_crop_params.py  run_ml_predict_params.py  run_ml_predict_ropt.py  run_ml_predict_saturating_params.py  run_pipeline_synthetic.py  run_plot_bayes_state_curves.py  run_plot_regions.py  run_prism_county_month_demo.py  run_state_ml_linear_v2.py  run_synth_crops_demo.py  run_synth_demo.py  run_synth_with_features_demo.py  run_visualize_synthetic.py
docs/: quickstart.md  results_synthetic.md
src/piyrm/: bayes.py  bayes_crops.py  curves.py  features.py  fit.py  hello.py  ml.py  synthetic.py  synthetic_crops.py
src/piyrm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/piyrm/data/: __init__.py
src/piyrm/data/geo/: zonal.py
src/piyrm/data/sources/: climate.py  nass_quickstats.py  prism.py  tiger_counties.py  usda_nass.py
tests/: test_bayes_ml_priors_help_sparse.py  test_fit_recovery.py  test_ml_crosscrop_param_prediction.py  test_ml_param_prediction.py  test_ml_saturating_param_prediction.py
