[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "piyrm"
version = "0.1.0"
description = "Physics-Informed Yield Response Modeling"
authors = [{name = "Mehrdad"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
